# car_game

./: CMakeLists.txt  Dziura.cpp  Dziura.h  Menu.cpp  Menu.h  Numery.cpp  Numery.h  README.md  SmallView.cpp  SmallView.h  WindowGame.cpp  WindowGame.h  instrukcja.cpp  instrukcja.h  main.cpp  samochod.cpp  samochod.h  text.txt
